--- a/styles/components/about-person.scss
+++ b/styles/components/about-person.scss
@@ -6,7 +6,11 @@
   }
 
   .about-person-image {
-    width: 144px;
+    width: 100px;
+
+    @media (min-width: $mediumbp) {
+      width: 144px;
+    }
   }
 
   .about-person-text {
@@ -15,9 +19,14 @@
 
   img {
     border-radius: 300px;
-    width: 144px;
-    height: 144px;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
+
+    @media (min-width: $mediumbp) {
+      width: 144px;
+      height: 144px;
+    }
   }
 
   h3,
